create github pages

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                          <img src="assets/images/jogging.svg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="https://mobirise.com">&nbsp; Zancada</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="#top">&nbsp; Zancada</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="page1.html#menu1-q"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
+                    <a class="nav-link link text-secondary display-4" href="#top"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
                         Nosotros</a>
                 </li>
                 <li class="nav-item">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
