--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                         Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="#top"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
-                        ¿Qué hacemos? &nbsp; &nbsp; &nbsp; &nbsp;</a>
+                    <a class="nav-link link text-secondary display-4" href="page1.html"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
+                        ¿Qué proponemos? &nbsp; &nbsp; &nbsp; &nbsp;</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -93,7 +93,7 @@
 
     <div class="container pt-4 mt-2">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">¿Cuál es nuestra problemática?<br><br></h2>
-        <h3 class="mbr-section-subtitle pb-5 align-center mbr-fonts-style display-5">De acuerdo a la Encuesta Nacional de Salud y el Coordinador del Módulo de Actividad Dísica y Salud del CIAM, Alejandro Gaytán González, en México entre el 50% y 60% de los niños no practican deporte de manera regular o no realizan suficiente actividad física.</h3>
+        <h3 class="mbr-section-subtitle pb-5 align-center mbr-fonts-style display-5">De acuerdo a la Encuesta Nacional de Salud y el Coordinador del Módulo de Actividad Física y Salud del CIAM, Alejandro Gaytán González, en México entre el 50% y 60% de los niños no practican deporte de manera regular o no realizan suficiente actividad física.</h3>
         <div>
                 <div class="cards-container">
                     <div class="card col-12 col-md-6 col-lg-4 pb-md-4">
@@ -161,7 +161,7 @@
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Falta de cultura física en nuestro país</h4>
-                                <p class="mbr-content-text mbr-fonts-style display-7">Los principales motivos de que población mexicana sea  inactiva físicamente y que nunca ha practicado actividades físico-deportivas son por la falta de tiempo, cansancio por el trabajo, pereza  y problemas de salud.<br></p>
+                                <p class="mbr-content-text mbr-fonts-style display-7">Los principales motivos por los cuales la población mexicana sea  inactiva físicamente y que nunca ha practicado actividades físico-deportivas son por la falta de tiempo, cansancio por el trabajo, pereza  y problemas de salud.<br></p>
                             </div>
                         </div>
                     </div>
