--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="#top"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
+                    <a class="nav-link link text-secondary display-4" href="index.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
                         Nosotros</a>
                 </li>
                 <li class="nav-item">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
