--- a/page2.html
+++ b/page2.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="#top"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
+                    <a class="nav-link link text-secondary display-4" href="index.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
                         Nosotros</a>
                 </li>
                 <li class="nav-item">
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/c">site builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
