--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="page1.html"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
+                    <a class="nav-link link text-secondary display-4" href="page1.html#menu1-q"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
                         ¿Qué proponemos? &nbsp; &nbsp; &nbsp; &nbsp;</a>
                 </li></ul>
             
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
