--- a/page2.html
+++ b/page2.html
@@ -53,7 +53,7 @@
                         Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="page1.html"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
+                    <a class="nav-link link text-secondary display-4" href="page1.html#menu1-q"><span class="mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 27px;"></span>
                         ¿Qué proponemos? &nbsp; &nbsp; &nbsp; &nbsp;</a>
                 </li></ul>
             
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
